--- a/AlgoVision-App/package.json
+++ b/AlgoVision-App/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@datastructures-js/priority-queue": "^6.3.4",
+    "d3-force": "^3.0.0",
     "framer-motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
